assets/css/style.css
/* Main Body Section */
#main {
  box-sizing: border-box;
  min-width: 100%;
  max-width: 100%;
  margin: 0;
  width: 1500px;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
}

#submitBtn {
  -webkit-appearance: none;
  color: white;
}

/* Row Spacing */
.row {
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  min-width: 100%;
}

/* HTML Width */
html {
  max-width: 100%;
  min-width: 100%;
}

/* Body Color */
body {
  background-color: #a7b3a5;
}

/* Logo text flow */
#logo-container {
  overflow: hidden;
  white-space: nowrap;
  font-weight: 1.5em;
}

/* Nav Colors */
nav ul a,
nav .brand-logo {
  color: #444;
}

/* Greeting Font Styling */
#greetingFont {
  filter: drop-shadow(0 0 0.75rem #000);
  font-family: 'Josefin Slab',
    serif;

}

/* Icon colors */
i,
.devicons {
  color: #eae3ea;
}

/* Header styles */
h3,
h5 {
  filter: drop-shadow(0 0 0.75rem #000);
}

/* Header colors */
h2,
h4 {
  color: #b56357;
}

/* Specific header fontsize */
h3 {
  font-size: 1.2em;
}

/* Text position and style */
#serveText {
  position: relative;
  filter: drop-shadow(0 0 0.75rem #000);
}

/* Button Color and style */
.btn-large {
  border-radius: 5px;
  background-color: #b56357;

}

/* Button hover Style */
.btn-large:hover {
  background-color: rgba(194, 38, 11) !important;
}

/* Button color */
#download-button {
  background-color: #b56357;
  ;
}

/* Body Text style */
p {
  line-height: 2rem;
  color: #eae3ea;
}

/* label color */
.input-field label {
  color: #eae3ea;
}

/* label focus color */
.input-field input:focus+label,
  {
  color: #444;
}

/* label underline focus color */
.input-field input[type=text]:focus {
  border-bottom: 1px solid #444;
  box-shadow: 0 1px 0 0 #444;
}

/* valid color */
.input-field input[type=text].valid {
  border-bottom: 1px solid #444;
  box-shadow: 0 1px 0 0 #444;
}

/* invalid color */
.input-field input[type=text].invalid {
  border-bottom: 1px solid #444;
  box-shadow: 0 1px 0 0 #444;
}

/* icon prefix focus color */
.input-field .prefix.active {
  color: #444;
}

/* Side Nav Icons */
#sideNav-icons {
  color: black;
  font-size: 1.8em;
  margin: auto;
  min-width: 100%;
}

/* Sidenav trigger color */
.sidenav-trigger {
  color: #bb5566;
}

/* Sidenav width */
.sidenav {
  max-width: 250px;
}

/* Sidenav H2 */
.sidenav h2 {
  float: none;
}

/* Sidenav li a float */
.sidenav li a {
  float: left;
}

/* Nav color */
nav li a,
nav #logo-container {
  color: #eae3ea;
}

/* Side Nav Text styles */
.sidenav li a {
  font-size: 2em;
  letter-spacing: .3em;
}

/* Side Nav Headshot Image */
#headshotImg {
  margin: 0;
  padding: 5px;
  border-radius: 50em;
}

/* Image resize */
.resize {
  width: 150px;
  height: auto;
}

/* Image resize */
.resize {
  width: auto;
  height: 300px;
}

/* Parallax Container Styles */
.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255, 255, 255, .9);
}

/* Parallax Container Section */
.parallax-container .section {
  max-width: 100%;
}

/* Icon Block padding */
.icon-block {
  padding: 0 15px;
}

/* Icon Block Icon Font Size */
.icon-block .material-icons {
  font-size: inherit;
}

/* Image Styles */
img {
  margin: 0 auto;
  padding: 0;
  min-width: 100%;
  width: 100%;
}

/* Self Image Styles */
#selfImage {
  margin-top: 40px;
  height: 400px;
  border: none;
}

/* Self Image Text Styles */
#selfImageText {
  width: 50px;
  font-size: 45px;
  word-wrap: break-word;
  margin-left: 50px;
}

/* Set Contact Form Margin */
#contact {
  padding: 20px;
}

.hoverText {
  display: none;
}

/* Keep Action button from expanding html width */
#actionBtn {
  max-width: 100%;
  display: inline-block;
}

/* Card Radius */
.card {
  border-radius: 5px;
}

/* On hover display breathing text box  */
#portfolio:hover .hoverText {
  display: block;
  -webkit-animation: breathing 5s ease-out infinite normal;
  animation: breathing 5s ease-out infinite normal;
}

/* Breathing animation for hover text */
@-webkit-keyframes breathing {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }

  25% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }

  50% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }

  75% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }

  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes breathing {
  0% {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }

  25% {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
  }

  50% {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }

  75% {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
  }

  100% {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

/* Portrait and Landscape */
@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
  #hero {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
  }

  /* Image Styles */
  img {
    margin: 0 auto;
    padding: 0;
    min-width: 100%;
    width: 100%;
  }
}

/* Portrait */
@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
  #hero {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
  }

  /* Image Styles */
  img {
    margin: 0 auto;
    padding: 0;
    min-width: 100%;
    width: 100%;
  }
}

/* Landscape */
@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
  #hero {
    max-width: 100%;
    min-width: 100%;
    width: 100%;
  }

  /* Image Styles */
  img {
    margin: 0 auto;
    padding: 0;
    min-width: 100%;
    width: 100%;
  }
}

